# Stylist

./: .gitignore  AGENTS.md  App.tsx  app.json  package-lock.json  package.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/cpp/: CMakeLists.txt  StylistInferenceJNI.cpp  StylistInferenceJNI.h
android/app/src/main/java/com/stylist/: AssetCopier.kt  MainActivity.kt  MainApplication.kt  StylistInferenceModule.kt  StylistInferencePackage.kt
android/app/src/main/jni/: CMakeLists.txt
ios/: Podfile
ios/Stylist/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/Stylist.xcodeproj/: project.pbxproj
ios/Stylist.xcodeproj/xcshareddata/xcschemes/: Stylist.xcscheme
src/: NativeStylistInference.ts  theme.ts
src/components/: MenuSheet.tsx  ResultModal.tsx
src/hooks/: useModel.ts
src/screens/: CameraScreen.tsx
src/services/: ModelService.ts  types.ts
